<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    tools:layout_editor_absoluteY="25dp">

    <name.small.ballflinggame.InteractiveBackground
        android:id="@+id/interactiveBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:typeface="monospace"
        tools:layout_editor_absoluteY="32dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:text="@string/exit_Game"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="346dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="266dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="186dp" />

</android.support.constraint.ConstraintLayout>